// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`binotype.Context.Menu > Menu.convert > convert(''empty menu'') 1`] = `
{
  "depth": undefined,
  "items": [],
}
`;

exports[`binotype.Context.Menu > Menu.convert > convert(''menu with items'') 1`] = `
{
  "depth": undefined,
  "items": [
    {
      "description": "About page content",
      "items": [],
      "label": "About",
      "selected": undefined,
      "url": "/about",
    },
    {
      "description": "Contact page content",
      "items": [],
      "label": "Contact",
      "selected": "current",
      "url": "/contact",
    },
  ],
}
`;

exports[`binotype.Context.Menu > Menu.convert > convert(''menu with nested items'') 1`] = `
{
  "depth": undefined,
  "items": [
    {
      "description": "Blog section",
      "items": [
        {
          "description": "Blog post content",
          "items": [],
          "label": "First Post",
          "selected": "current",
          "url": "/blog/first-post",
        },
      ],
      "label": "Blog",
      "selected": "parent",
      "url": "/blog",
    },
  ],
}
`;

exports[`binotype.Context.Menu > load > load(''empty site'', ''/'') 1`] = `
{
  "depth": undefined,
  "items": [],
}
`;

exports[`binotype.Context.Menu > load > load(''simonmika.com'', ''article/to-live'') 1`] = `
{
  "depth": undefined,
  "items": [
    {
      "description": "Articles",
      "items": [
        {
          "description": "Taking Risk When Dying",
          "items": [],
          "label": "Taking Risk When Dying",
          "selected": undefined,
          "url": "/article/taking-risk-when-dying",
        },
        {
          "description": "Optimizing Software",
          "items": [],
          "label": "Optimizing Software",
          "selected": undefined,
          "url": "/article/optimizing-software",
        },
        {
          "description": "Naming",
          "items": [],
          "label": "Naming",
          "selected": undefined,
          "url": "/article/naming",
        },
        {
          "description": "The Programming Interview",
          "items": [],
          "label": "The Programming Interview",
          "selected": undefined,
          "url": "/article/programming-interview",
        },
        {
          "description": "Recruiting Process",
          "items": [],
          "label": "Recruiting Process",
          "selected": undefined,
          "url": "/article/recruiting-process",
        },
        {
          "description": "Rock Star Programmers",
          "items": [],
          "label": "Rock Star Programmers",
          "selected": undefined,
          "url": "/article/rock-star-programmers",
        },
        {
          "description": "To Live",
          "items": [],
          "label": "To Live",
          "selected": undefined,
          "url": "/article/to-live",
        },
      ],
      "label": "Articles",
      "selected": undefined,
      "url": "/article",
    },
    {
      "description": "Talks",
      "items": [
        {
          "description": "Egenanställd Konsult",
          "items": [],
          "label": "Egenanställd Konsult",
          "selected": undefined,
          "url": "/talk/egen-konsult",
        },
        {
          "description": "Retro Game w/ Modern UI Tools",
          "items": [],
          "label": "Retro Game w/ Modern UI Tools",
          "selected": undefined,
          "url": "/talk/retro-game-modern-ui-tools",
        },
        {
          "description": "Recruiting and Become Recruited 2025",
          "items": [],
          "label": "Recruiting and Become Recruited 2025",
          "selected": undefined,
          "url": "/talk/recruiting2025",
        },
        {
          "description": "Recruiting and Become Recruited",
          "items": [],
          "label": "Recruiting and Become Recruited",
          "selected": undefined,
          "url": "/talk/recruiting",
        },
        {
          "description": "How I Use TypeScript",
          "items": [],
          "label": "How I Use TypeScript",
          "selected": undefined,
          "url": "/talk/how-i-use-typescript",
        },
        {
          "description": "On Programming",
          "items": [],
          "label": "On Programming",
          "selected": undefined,
          "url": "/talk/on-programming",
        },
      ],
      "label": "Talks",
      "selected": undefined,
      "url": "/talk",
    },
    {
      "description": "Contact",
      "items": [],
      "label": "Contact",
      "selected": undefined,
      "url": "/contact",
    },
    {
      "description": "Description",
      "items": [],
      "label": "Description",
      "selected": undefined,
      "url": "/description",
    },
    {
      "description": "Subscribe",
      "items": [],
      "label": "Subscribe",
      "selected": undefined,
      "url": "/subscribe",
    },
    {
      "description": "About",
      "items": [],
      "label": "About",
      "selected": undefined,
      "url": "/about",
    },
  ],
}
`;

exports[`binotype.Context.Menu > load > load(''site with blocks and pages'', ''/'') 1`] = `
{
  "depth": undefined,
  "items": [
    {
      "description": "Welcome",
      "items": [],
      "label": "Welcome",
      "selected": undefined,
      "url": "/#hero",
    },
    {
      "description": "Features",
      "items": [],
      "label": "Features",
      "selected": undefined,
      "url": "/#features",
    },
    {
      "description": "About",
      "items": [],
      "label": "About",
      "selected": undefined,
      "url": "/about",
    },
  ],
}
`;

exports[`binotype.Context.Menu > load > load(''site with menu disabled blocks'', ''/'') 1`] = `
{
  "depth": undefined,
  "items": [
    {
      "description": "Features",
      "items": [],
      "label": "Features",
      "selected": undefined,
      "url": "/#features",
    },
    {
      "description": "About",
      "items": [],
      "label": "About",
      "selected": undefined,
      "url": "/about",
    },
  ],
}
`;

exports[`binotype.Context.Menu > load > load(''site with multiple pages, current at …'', ''/'') 1`] = `
{
  "depth": undefined,
  "items": [
    {
      "description": "About",
      "items": [],
      "label": "About",
      "selected": undefined,
      "url": "/about",
    },
    {
      "description": "Contact Us",
      "items": [],
      "label": "Contact Us",
      "selected": undefined,
      "url": "/contact",
    },
    {
      "description": "Blog",
      "items": [
        {
          "description": "First Post",
          "items": [],
          "label": "First Post",
          "selected": undefined,
          "url": "/blog/first-post",
        },
      ],
      "label": "Blog",
      "selected": undefined,
      "url": "/blog",
    },
  ],
}
`;

exports[`binotype.Context.Menu > load > load(''site with nested pages, current at ab…'', ''/about'') 1`] = `
{
  "depth": undefined,
  "items": [
    {
      "description": "About",
      "items": [],
      "label": "About",
      "selected": "current",
      "url": "/about",
    },
    {
      "description": "Contact Us",
      "items": [],
      "label": "Contact Us",
      "selected": undefined,
      "url": "/contact",
    },
    {
      "description": "Blog",
      "items": [
        {
          "description": "First Post",
          "items": [],
          "label": "First Post",
          "selected": undefined,
          "url": "/blog/first-post",
        },
        {
          "description": "Second Post",
          "items": [],
          "label": "Second Post",
          "selected": undefined,
          "url": "/blog/second-post",
        },
      ],
      "label": "Blog",
      "selected": undefined,
      "url": "/blog",
    },
  ],
}
`;

exports[`binotype.Context.Menu > load > load(''site with nested pages, current at bl…'', ''/blog/first-post'') 1`] = `
{
  "depth": undefined,
  "items": [
    {
      "description": "About",
      "items": [],
      "label": "About",
      "selected": undefined,
      "url": "/about",
    },
    {
      "description": "Blog",
      "items": [
        {
          "description": "First Post",
          "items": [],
          "label": "First Post",
          "selected": "current",
          "url": "/blog/first-post",
        },
        {
          "description": "Second Post",
          "items": [],
          "label": "Second Post",
          "selected": undefined,
          "url": "/blog/second-post",
        },
      ],
      "label": "Blog",
      "selected": "parent",
      "url": "/blog",
    },
  ],
}
`;

exports[`binotype.Context.Menu > load > load(''site with single page'', ''/'') 1`] = `
{
  "depth": undefined,
  "items": [
    {
      "description": "About",
      "items": [],
      "label": "About",
      "selected": undefined,
      "url": "/about",
    },
  ],
}
`;
